# xxl-job-fork

./: .gitignore
doc/: xxl-job-admin-function-list.md
rust-admin/: Cargo.toml  README.md
rust-admin/config/: default.toml
rust-admin/src/: auth.rs  config.rs  error.rs  main.rs  request_preview.rs  state.rs
rust-admin/src/entities/: job_group.rs  job_info.rs  job_log.rs  job_log_report.rs  job_logglue.rs  job_registry.rs  job_user.rs  mod.rs
rust-admin/src/routes/: admin.rs  auth.rs  dashboard.rs  glue.rs  job_groups.rs  job_info.rs  job_logs.rs  job_user.rs  mod.rs  openapi.rs
rust-admin/src/templates/: mod.rs
rust-admin/templates/: dashboard.html  job-groups.html  job-info.html  job-logs.html  layout.html  login.html
xxl-job-rust-core/: .env  Cargo.toml
xxl-job-rust-core/migrations/: 20251004101107_create_xxl_job_info_table.up.sql  20251004122038_create_xxl_job_group_table.down.sql  20251004122038_create_xxl_job_group_table.up.sql  20251004122218_create_xxl_job_log_table.down.sql  20251004122218_create_xxl_job_log_table.up.sql  20251004122406_create_xxl_job_user_table.down.sql  20251004122406_create_xxl_job_user_table.up.sql
xxl-job-rust-core/src/: db.rs  main.rs  models.rs  web.rs
xxl-job-web/: README.md  package-lock.json  package.json  vite.config.cjs
xxl-job-web/src/api/: index.js
xxl-job-web/src/router/: index.js
xxl-job-web/src/stores/: auth.js
xxl-job-web/src/views/: DashboardView.vue  ExecutorManagementView.vue  JobLogView.vue  JobManagementView.vue  LoginView.vue  MainLayout.vue  UserManagementView.vue
