[package]
name = "rust-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
serde_repr = "0.1"
sea-orm = { version = "0.12", features = ["macros", "runtime-tokio-rustls", "sqlx-mysql", "with-chrono"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
config = { version = "0.13", features = ["toml"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
sha2 = "0.10"
hex = "0.4"
once_cell = "1"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tower = "0.4"
async-trait = "0.1"
validator = { version = "0.16", features = ["derive"] }
cron = "0.12"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
anyhow = "1"
askama = "0.12"
url = "2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
